# shepherd

./: .gitignore  ARCHITECTURE.md  CONTEXT.md  PRD.md  README.md  pyproject.toml  requirements.txt
docs/adr/: 0001-agent-agnostic-adapter-architecture.md  0002-minimal-schema-approach.md  0003-python-runtime.md  0004-two-tier-privacy-model.md  0005-intent-inference-over-dod.md
docs/superpowers/plans/: 2026-05-14-shepherd-scaffolding.md
docs/superpowers/specs/: 2026-05-14-scaffolding-design.md
src/shepherd/: models.py  pipeline.py
tests/: test_models.py
