[project]
name = "shepherd"
version = "0.1.0"
description = "Real-world AI usability measurement. Rate your AI coding sessions."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
shepherd = "shepherd.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shepherd"]

[tool.pytest.ini_options]
testpaths = ["tests"]